fixing_posts_collapse

--- a/src/components/CardNewsNew/index.scss
+++ b/src/components/CardNewsNew/index.scss
@@ -291,9 +291,16 @@
     }
   }
   &__text-wrap {
-    max-height: 104px;
+    max-height: 140px;
     margin: 20px 10px 0;
     overflow: hidden;
+    //&>div>div {
+    //  margin-bottom: 10px;
+    //}
+    //&>p{
+    //  overflow: hidden;
+    //  text-overflow: ellipsis;
+    //}
     &__collapsed {
       height: auto;
       margin: 20px 10px 0;
