--- a/src/pages/NewsFeed/components/NewsFeedItem/index.scss
+++ b/src/pages/NewsFeed/components/NewsFeedItem/index.scss
@@ -299,7 +299,7 @@
     }
   }
   &__text-wrap {
-    max-height: 104px;
+    max-height: 140px;
     overflow: hidden;
     &._collapsed {
       height: auto;
